--- a/home.css
+++ b/home.css
@@ -1,16 +1,11 @@
 @import url('./navlink.css');
 @import url('./footer.css');
+@import url('./styles.css');
 
 body {
     height: 100vh;
     margin: 0;
     padding: 0;
-}
-
-h1 {
-    font-style: normal;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: 551a8b;
 }
 
 
@@ -51,7 +46,6 @@ h1 {
 .bio {
     font-size: 24px;
     text-align: center;
-    max-width: 800px;
     justify-content: center;
     line-height: 40px;
     padding-left: 50px;
